--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hola mundo</h1>
-    <p>Ja estem online</p>
+    <a href="Formato/Activitat1.html">Activitat1</a>
 </body>
 </html>
