--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hola mundo</h1>
+    <h2>Formato</h2>
     <a href="Formato/Activitat1.html">Activitat1</a>
 </body>
 </html>
