afegir activitat2 al index

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hola mundo</h1>
     <h2>Formato</h2>
     <a href="Formato/Activitat1.html">Activitat1</a>
+    <a href="Formato/Activitat2.html">Activitat2</a>
 </body>
 </html>
