--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Hola mundo</h1>
     <h2>Formato</h2>
-    <a href="Formato/Activitat1.html">Activitat1</a>
-    <a href="Formato/Activitat2.html">Activitat2</a>
+    <a href="Formato/activitat1.html">activitat1</a><br>
+    <a href="Formato/activitat2.html">activitat2</a><br>
+    <a href="Formato/activitat3.html">activitat3</a><br>
 </body>
 </html>
