--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>Formato</h2>
     <a href="Formato/activitat1.html">activitat1</a><br>
     <a href="Formato/activitat2.html">activitat2</a><br>
+    <a href="Formato/activitat3.html">activitat3</a><br>
 </body>
 </html>
