--- a/Formato/Activitat2.html
+++ b/Formato/Activitat2.html
@@ -12,5 +12,6 @@
     <p>Suspendisse ultricies tortor non ex finibus semper. In bibendum, urna et ullamcorper interdum, odio sem cursus orci, at cursus metus velit ut sem.</p>
     <h2>Titulo secundario con h2</h2>
     <p>Vivamus faucibus lacus ut commodo cursus. Donec eget erat a mauris egestas fermentum. Donec est neque, dignissim sit amet dignissim vel, maximus eu dui.</p>
+    <a href="../index.html">Tornar al Índex</a>
 </body>
 </html>
