--- a/Formato/activitat3.html
+++ b/Formato/activitat3.html
@@ -13,5 +13,6 @@
     <h5>Aqui estoy gastando h5</h5>
     <h6>Aqui estoy gastando h6</h6>
     <p>Yo soy un sencillo párrafo</p>
+    <a href="../index.html">Tornar al Índex</a>
 </body>
 </html>
