--- a/Formato/activitat4.html
+++ b/Formato/activitat4.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Actualidad</h1>
-    <p>La <b>sintàxis HTML </b>es altamente demandado en el actual <i>panorama tecnológico</i></p>
+    <p>La <b>sintàxis HTML </b>es altamente demandado en el actual <i>panorama tecnológico.</i></p>
     <a href="../index.html">Tornar al Índex</a>
 </body>
 </html>
