--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="Formato/activitat2.html">activitat2</a><br>
     <a href="Formato/activitat3.html">activitat3</a><br>
     <a href="Formato/activitat4.html">activitat4</a><br>
+    <a href="Formato/activitat5.html">activitat5</a><br>
 </body>
 </html>
