--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="Formato/activitat3.html">activitat3</a><br>
     <a href="Formato/activitat4.html">activitat4</a><br>
     <a href="Formato/activitat5.html">activitat5</a><br>
+    <a href="Formato/activitat6.html">activitat6</a><br>
 </body>
 </html>
