--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href="Formato/activitat4.html">activitat4</a><br>
     <a href="Formato/activitat5.html">activitat5</a><br>
     <a href="Formato/activitat6.html">activitat6</a><br>
+    <a href="Formato/activitat7.html">activitat7</a><br>
 </body>
 </html>
