crear activitat1 hipervinculos

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <a href="Formato/activitat5.html">activitat5</a><br>
     <a href="Formato/activitat6.html">activitat6</a><br>
     <a href="Formato/activitat7.html">activitat7</a><br>
+    <h2>Hipervinculos</h2>
+    <a href="Hipervinculos/activitat1.html">activitat1</a><br>
 </body>
 </html>
