e modificat activitat7 formato

--- a/Formato/activitat7.html
+++ b/Formato/activitat7.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-     
+    <h1>Les Meves Vacances Inoblidables</h1>
+
+    <p>
+        <b>Decisió Única:</b> Les meves vacances aquest estiu han estat <i>simplement inoblidables</i>. Vaig decidir passar-les a la bonica regió de Catalunya i va ser una decisió que mai oblidaré.
+    </p>
+
+    <h2>Descobrint Barcelona</h2>
+    <p>
+        Després de uns dies a la ciutat, vaig decidir explorar la costa mediterrània. Les platges de la <b>Costa Brava</b> em van deixar sense paraules. Les aigües cristal·lines i les cales amagades van ser el lloc perfecte per relaxar-me i gaudir del sol.
+    </p>
+
+    <h2>Vinyes i Delicies</h2>
+    <p>
+        No podia deixar de visitar la regió del <i>Priorat</i>, coneguda pels seus vins excepcionals. Vaig fer una visita a algunes de les vinyes més famoses i vaig tastar alguns dels millors vins de la zona. Va ser una <b>experiència única i deliciosa</b>.
+    </p>
+
+    <p>
+        En resum, les meves vacances a Catalunya van ser plenes d'<i>aventures, descobriments</i> i moments inoblidables. Estic agraït de haver tingut l'oportunitat de <b>explorar aquesta meravellosa regió</b> i espero tornar aviat per viure més experiències inoblidables.
+    </p>
+    <a href="../index.html">Tornar al Índex</a>
 </body>
 </html>
