crear activitat2 hipervinculos

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <a href="Formato/activitat7.html">activitat7</a><br>
     <h2>Hipervinculos</h2>
     <a href="Hipervinculos/activitat1.html">activitat1</a><br>
+    <a href="Hipervinculos/activitat2.html">activitat2</a><br>
 </body>
 </html>
