crear Activitat3 hipervinculos

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <h2>Hipervinculos</h2>
     <a href="Hipervinculos/activitat1.html">activitat1</a><br>
     <a href="Hipervinculos/activitat2.html">activitat2</a><br>
+    <a href="Hipervinculos/activitat3.html">activitat3</a><br>
 </body>
 </html>
