--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     <a href="Hipervinculos/activitat3.html">activitat3</a><br>
     <h2>Listas</h2>
     <a href="Listas/activitat1.html">activitat1</a><br>
+    <a href="Listas/activitat2.html">activitat2</a><br>
 </body>
 </html>
