crear activitat3 listas

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <h2>Listas</h2>
     <a href="Listas/activitat1.html">activitat1</a><br>
     <a href="Listas/activitat2.html">activitat2</a><br>
+    <a href="Listas/activitat3.html">activitat3</a><br>
 </body>
 </html>
