--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <a href="Listas/activitat1.html">activitat1</a><br>
     <a href="Listas/activitat2.html">activitat2</a><br>
     <a href="Listas/activitat3.html">activitat3</a><br>
+    <a href="Listas/activitat4.html">activitat4</a><br>
 </body>
 </html>
