crear activitat5 listas

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <a href="Listas/activitat2.html">activitat2</a><br>
     <a href="Listas/activitat3.html">activitat3</a><br>
     <a href="Listas/activitat4.html">activitat4</a><br>
+    <a href="Listas/activitat5.html">activitat5</a><br>
 </body>
 </html>
