modificar activitat5 listas

--- a/Listas/activitat5.html
+++ b/Listas/activitat5.html
@@ -29,5 +29,6 @@
             <li>Pes: 50 tonelades.</li>
         </ul>
     </ol>
+    <a href="../index.html">Tornar al Índex</a>
 </body>
 </html>
