crear activitat1 imagenes

--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
     <a href="Listas/activitat3.html">activitat3</a><br>
     <a href="Listas/activitat4.html">activitat4</a><br>
     <a href="Listas/activitat5.html">activitat5</a><br>
+    <h2>Imagenes</h2>
+    <a href="Imagenes/activitat1.html">activitat1</a><br>
 </body>
 </html>
