crear activitat2 imagenes

--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <a href="Listas/activitat5.html">activitat5</a><br>
     <h2>Imagenes</h2>
     <a href="Imagenes/activitat1.html">activitat1</a><br>
+    <a href="Imagenes/activitat2.html">activitat2</a><br>
 </body>
 </html>
