crear activitat3 imagenes

--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     <h2>Imagenes</h2>
     <a href="Imagenes/activitat1.html">activitat1</a><br>
     <a href="Imagenes/activitat2.html">activitat2</a><br>
+    <a href="Imagenes/activitat3.html">activitat3</a><br>
 </body>
 </html>
