crear activitat4 imagenes

--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
     <a href="Imagenes/activitat1.html">activitat1</a><br>
     <a href="Imagenes/activitat2.html">activitat2</a><br>
     <a href="Imagenes/activitat3.html">activitat3</a><br>
+    <a href="Imagenes/activitat4.html">activitat4</a><br>
 </body>
 </html>
