crear activitat1 tablas

--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
     <a href="Imagenes/activitat2.html">activitat2</a><br>
     <a href="Imagenes/activitat3.html">activitat3</a><br>
     <a href="Imagenes/activitat4.html">activitat4</a><br>
+    <h2>Tablas</h2>
+    <a href="Tablas/activitat1.html">activitat1</a><br>
 </body>
 </html>
