crear activitat2 tablas

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
     <a href="Imagenes/activitat4.html">activitat4</a><br>
     <h2>Tablas</h2>
     <a href="Tablas/activitat1.html">activitat1</a><br>
+    <a href="Tablas/activitat2.html">activitat2</a><br>
 </body>
 </html>
