crear activitat3 tablas

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
     <h2>Tablas</h2>
     <a href="Tablas/activitat1.html">activitat1</a><br>
     <a href="Tablas/activitat2.html">activitat2</a><br>
+    <a href="Tablas/activitat3.html">activitat3</a><br>
 </body>
 </html>
