--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
     <a href="Tablas/activitat1.html">activitat1</a><br>
     <a href="Tablas/activitat2.html">activitat2</a><br>
     <a href="Tablas/activitat3.html">activitat3</a><br>
+    <h2>Formularios</h2>
+    <a href="Formularios/activitat1.html">activitat1</a><br>
 </body>
 </html>
