--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     <a href="Tablas/activitat3.html">activitat3</a><br>
     <h2>Formularios</h2>
     <a href="Formularios/activitat1.html">activitat1</a><br>
+    <a href="Formularios/activitat2.html">activitat2</a><br>
 </body>
 </html>
