crear activitat3 formularios

--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
     <h2>Formularios</h2>
     <a href="Formularios/activitat1.html">activitat1</a><br>
     <a href="Formularios/activitat2.html">activitat2</a><br>
+    <a href="Formularios/activitat3.html">activitat3</a><br>
 </body>
 </html>
