--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
     <a href="Formularios/activitat1.html">activitat1</a><br>
     <a href="Formularios/activitat2.html">activitat2</a><br>
     <a href="Formularios/activitat3.html">activitat3</a><br>
+    <a href="Formularios/activitat4.html">activitat4</a><br>
 </body>
 </html>
