he deixat mitg feta lactivitat 1 de multimedia pro encara falta acabarla

--- a/index.html
+++ b/index.html
@@ -39,5 +39,7 @@
     <a href="Formularios/activitat2.html">activitat2</a><br>
     <a href="Formularios/activitat3.html">activitat3</a><br>
     <a href="Formularios/activitat4.html">activitat4</a><br>
+    <h2>Multimedia</h2>
+    <a href="Multimedia/activitat1.html">activitat1</a><br>
 </body>
 </html>
