acabar activitat1 multimedia

--- a/Multimedia/activitat1.html
+++ b/Multimedia/activitat1.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <audio
+    controls
+    src=""
+    >
+    <p>
+        Su navegador no soporta el formato del audio, pulse <a href="t-rex.mp3">aquí</a> para descargarlo.
+    </p>
+</audio>
+
 </body>
 </html>
