--- a/Multimedia/activitat1.html
+++ b/Multimedia/activitat1.html
@@ -8,10 +8,10 @@
 <body>
     <audio
     controls
-    src=""
+    src="Audio/CR7 audio.mp3"
     >
     <p>
-        Su navegador no soporta el formato del audio, pulse <a href="t-rex.mp3">aquí</a> para descargarlo.
+        Su navegador no soporta el formato del audio, pulse <a href="Audio/CR7 audio.mp3">aquí</a> para descargarlo.
     </p>
 </audio>
 
