--- a/Multimedia/activitat1.html
+++ b/Multimedia/activitat1.html
@@ -6,14 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Audio CR7</h1>
+    <h1>Audio troll</h1>
     <audio
     controls
-    src="Audio/CR7 audio.mp3"
+    src="Audio/Audio troll.mp3"
     >
     <p>
-        Su navegador no soporta el formato del audio, pulse <a href="Audio/CR7 audio.mp3">aquí</a> para descargarlo.
+        Su navegador no soporta el formato del audio, pulse <a href="Audio/Audio troll.mp3">aquí</a> para descargarlo.
     </p>
 </audio>
+<a href="../index.html">Tornar al Índex</a>
 </body>
 </html>
