--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
     <a href="Formularios/activitat4.html">activitat4</a><br>
     <h2>Multimedia</h2>
     <a href="Multimedia/activitat1.html">activitat1</a><br>
+    <a href="Multimedia/activitat2.html">activitat2</a><br>
 </body>
 </html>
