--- a/html/Formato/activitat1.html
+++ b/html/Formato/activitat1.html
@@ -8,6 +8,6 @@
 <body>
     <p>Donec facilisis lacus vel quam interdum, ac maximus tortor tincidunt. Etiam ac libero eget nulla luctus aliquam. Donec ut volutpat felis. Proin hendrerit nec mi id venenatis.</p>
     <p>Morbi et interdum urna. In ultrices tincidunt dictum. Fusce semper turpis arcu, a rhoncus sapien lobortis at. Ut at accumsan est. Nullam imperdiet euismod semper. Vestibulum tempus quam vel arcu consequat, quis pharetra dolor bibendum.</p>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
