--- a/html/Formato/activitat7.html
+++ b/html/Formato/activitat7.html
@@ -25,6 +25,6 @@
     <p>
         En resum, les meves vacances a Catalunya van ser plenes d'<i>aventures, descobriments</i> i moments inoblidables. Estic agraït de haver tingut l'oportunitat de <b>explorar aquesta meravellosa regió</b> i espero tornar aviat per viure més experiències inoblidables.
     </p>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
