--- a/html/Formularios/activitat2.html
+++ b/html/Formularios/activitat2.html
@@ -49,6 +49,6 @@
     </label>
     <button type="submit">Enviar</button>
 </fieldset>
-<a href="../index.html">Tornar al Índex</a>
+<a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
