--- a/html/Formularios/activitat4.html
+++ b/html/Formularios/activitat4.html
@@ -77,6 +77,6 @@
         </label>    
         <button type="submit">Buscar</button>
       </fieldset>
-      <a href="../index.html">Tornar al Índex</a>
-</body>
+      <a href="../exercicishtml.html">Tornar a les activitats</a>
+    </body>
 </html>
