--- a/html/Hipervinculos/activitat1.html
+++ b/html/Hipervinculos/activitat1.html
@@ -20,6 +20,6 @@
         Nullam quis condimentum nulla. Mauris id nulla ultrices, maximus ante at, viverra eros. Praesent tristique finibus ex at porta. Vivamus sed tristique diam. Proin ac ultrices ante, id feugiat ante. Aenean luctus vel ante ut porttitor. Mauris venenatis orci at sem venenatis, sit amet mollis nulla maximus. Nulla tincidunt vitae arcu ut pulvinar. In ultricies non magna et cursus. Integer vel ipsum sem.
         
         Donec sed magna quam. Pellentesque quam dui, luctus ac nisi ullamcorper, fermentum porta nunc. Aliquam condimentum purus nec ligula ultricies fermentum. Vivamus tempor nulla at risus blandit, eu consectetur nisi bibendum. Mauris placerat laoreet velit, ac auctor ex congue nec. Praesent lobortis libero mi. In maximus vestibulum erat eget malesuada. Suspendisse non massa viverra, auctor leo convallis, consectetur velit. Phasellus sit amet interdum nulla. Mauris cursus malesuada eros sit amet ultrices. Nulla facilisi. Aliquam et lectus faucibus, iaculis ex sed, varius lorem. Cras iaculis mauris ut justo faucibus, ac ornare nisi commodo. Donec convallis lectus at rhoncus commodo.</p>
-    <a href="../index.html">Tornar al Índex</a>
+        <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
