--- a/html/Hipervinculos/activitat2.html
+++ b/html/Hipervinculos/activitat2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../index.html">Tornar al inici</a>
+    <a href="../exercicishtml.html">Tornar al inici</a>
     <h1><b>Menús</b></h1>
     <h2><b>Del día</b></h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lobortis purus lorem, non vestibulum dui mattis ut. Nullam condimentum dapibus mi, sed accumsan mauris tincidunt sollicitudin.</p>
