--- a/html/Hipervinculos/activitat3.html
+++ b/html/Hipervinculos/activitat3.html
@@ -8,7 +8,7 @@
 <body>
     <article class="group post">
         <h1 class="title">Guión obra de teatro</h1>
-        <div class="breadcumb"><a href="../index.html" title="Inici">Inici</a> » Guión obra de teatro
+        <div class="breadcumb"><a href="../exercicishtml.html" title="Inici">Inici</a> » Guión obra de teatro
         
         <br><a href="#Primer Acto">Anar Primer Acto</a><br>
         <a href="#Escena I">Anar Escena I</a><br>
