--- a/html/Imagenes/activitat1.html
+++ b/html/Imagenes/activitat1.html
@@ -13,6 +13,6 @@
     <h2>Competencia</h2>
     <p>In hac habitasse platea dictumst. Quisque quis elementum eros, id egestas quam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed egestas massa at est eleifend, nec faucibus nisl rutrum.</p>
     <img src="img/Imagen2.jpg" alt="Imagen2" width="200px"><br>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
