--- a/html/Imagenes/activitat2.html
+++ b/html/Imagenes/activitat2.html
@@ -10,6 +10,6 @@
     <img src="img/Faceebook.png" alt="Faceebook" width="100px"><br><br><br><br>
     <img src="img/Twitter.png" alt="Twitter" width="100px"><br><br><br><br>
     <img src="img/Youtube.png" alt="Youtube" width="100px"><br><br><br><br>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
