--- a/html/Imagenes/activitat3.html
+++ b/html/Imagenes/activitat3.html
@@ -12,6 +12,6 @@
     <h3><b>230 euros</b></h3>
     <h3><b>Descripción</b></h3>
     <p>Produce caprichosas descargas electricas. No apto para niños, adultos o mayores.</p>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
