--- a/html/Imagenes/activitat4.html
+++ b/html/Imagenes/activitat4.html
@@ -43,6 +43,6 @@
     <img src="img/Canelons.jfif" alt="Canelons" width="200px"><br>
     <h2><b>Resultat final:</b></h2>
     <img src="img/Canelons final.jfif" alt="Canelons final" width="300px"><br><br>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
