--- a/html/Listas/activitat1.html
+++ b/html/Listas/activitat1.html
@@ -13,6 +13,6 @@
         <li>USA Today</li>
         <li>Times</li>
     </ul>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
