--- a/html/Listas/activitat2.html
+++ b/html/Listas/activitat2.html
@@ -33,6 +33,6 @@
             <li>Friends</li>
         </ul>
     </ul>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
