--- a/html/Listas/activitat3.html
+++ b/html/Listas/activitat3.html
@@ -13,6 +13,6 @@
         <li>Decirle cosas bonitas.</li>
         <li>Volver a encender</li>
     </ol>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
