--- a/html/Multimedia/activitat1.html
+++ b/html/Multimedia/activitat1.html
@@ -15,6 +15,6 @@
         Su navegador no soporta el formato del audio, pulse <a href="Audio/Audio troll.mp3">aquí</a> para descargarlo.
     </p>
 </audio>
-<a href="../index.html">Tornar al Índex</a>
+<a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
