--- a/html/Tablas/activitat1.html
+++ b/html/Tablas/activitat1.html
@@ -32,6 +32,6 @@
             </tr>
         </tbody>
     </table>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html> 
