--- a/html/Tablas/activitat2.html
+++ b/html/Tablas/activitat2.html
@@ -55,6 +55,6 @@
             </tbody>
         </thead>
     </table>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
