--- a/html/Tablas/activitat3.html
+++ b/html/Tablas/activitat3.html
@@ -34,6 +34,6 @@
           <li>Creativitat.</li>
           <li>Pensament crític.</li>
         </ul>
-        <a href="../index.html">Tornar al Índex</a>
+        <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
