--- a/html/Formato/activitat4.html
+++ b/html/Formato/activitat4.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Actualidad</h1>
     <p>La <b>sintàxis HTML </b>es altamente demandado en el actual <i>panorama tecnológico.</i></p>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
