--- a/html/Formato/activitat5.html
+++ b/html/Formato/activitat5.html
@@ -9,6 +9,6 @@
     <h1>Ejemplo uso de la etiqueta &lt;time&gt;</h1>
     <p>Me despierto cada mañana a las &lt;time&gt;7:00&lt;time&gt; de la mañana.</p>
     <p>No obstante soy feliz porque hoy es mi oportunidad, es &lt;time datetime="2008-02-14 20:00"&gt;San Valentin&lt;/time&gt;.</p>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
