--- a/html/Formularios/activitat1.html
+++ b/html/Formularios/activitat1.html
@@ -26,6 +26,5 @@
       
         <button type="submit">Enviar</button>
       </fieldset>
-      <a href="../index.html">Tornar al Índex</a>
-</body>
+      <a href="../exercicishtml.html">Tornar a les activitats</a></body>
 </html>
