--- a/html/Formularios/activitat3.html
+++ b/html/Formularios/activitat3.html
@@ -36,6 +36,6 @@
       
         <button type="submit">Enviar</button>
       </fieldset>
-      <a href="../index.html">Tornar al Índex</a>
-</body>
+      <a href="../exercicishtml.html">Tornar a les activitats</a>
+    </body>
 </html>
