--- a/html/Listas/activitat4.html
+++ b/html/Listas/activitat4.html
@@ -15,6 +15,6 @@
             <li><a href="#">Contacte</a></li>
         </ul>
     </nav>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
