--- a/html/Listas/activitat5.html
+++ b/html/Listas/activitat5.html
@@ -29,6 +29,6 @@
             <li>Pes: 50 tonelades.</li>
         </ul>
     </ol>
-    <a href="../index.html">Tornar al Índex</a>
+    <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
