--- a/html/exercicishtml.html
+++ b/html/exercicishtml.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Index</h1>
+    <h1>Activitats HTML</h1>
     <h2>Formato</h2>
     <a href="Formato/activitat1.html">activitat1</a><br>
     <a href="Formato/activitat2.html">activitat2</a><br>
