--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Index</h1>
     <a href="html/exercicishtml.html">Exercicis HTML</a><br>
     <a href="css/exerciciscss.html">Exercicis CSS</a><br>
  
