crear activitat2 multimedia

--- a/html/Multimedia/activitat2.html
+++ b/html/Multimedia/activitat2.html
@@ -6,7 +6,38 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Trailer FIVE NIGHTS AT FREDDY'S</h1>
+    <table>
+        <thead>
+            <tr>
+                <th scope="col">FIVE NIGHTS AT FREDDY'S</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><b>Duració:</b> 1h 49m</td>
+            </tr>
+        </tbody>
+        <tbody>
+            <tr>
+                <td><b>Any:</b> 2014</td>
+            </tr>
+        </tbody>
+        <tbody>
+        <tr>
+            <td><b>Actors:</b><br> 
+                Josh Hutcherson<br>
+                Matthew Lillard<br>
+                Elizabeth Lail<br>
+            </td>
+        </tr>
+        </tbody>
+    </table><br>
+    <video controls src="Video/Y2meta.app-FIVE NIGHTS AT FREDDY'S - Tráiler Oficial 2 (Universal Studios) HD-(480p).mp4">
+        <p>
+            Su navegador no soporta el formato del vídeo, pulse <a href="Video/Y2meta.app-FIVE NIGHTS AT FREDDY'S - Tráiler Oficial 2 (Universal Studios) HD-(480p).mp4">aquí</a> para descargarlo.
+        </p>
+    </video><br>
     <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
