--- a/html/exercicishtml.html
+++ b/html/exercicishtml.html
@@ -42,5 +42,7 @@
     <h2>Multimedia</h2>
     <a href="Multimedia/activitat1.html">activitat1</a><br>
     <a href="Multimedia/activitat2.html">activitat2</a><br>
+    <h2>Contenido</h2>
+    <a href="Contenido/activitat1.html">activitat1</a><br>
 </body>
 </html>
