--- a/html/exercicishtml.html
+++ b/html/exercicishtml.html
@@ -44,5 +44,6 @@
     <a href="Multimedia/activitat2.html">activitat2</a><br>
     <h2>Contenido</h2>
     <a href="Contenido/activitat1.html">activitat1</a><br>
+    <a href="Contenido/activitat2.html">activitat2</a><br>
 </body>
 </html>
