acabada activitat 2 contenido

--- a/html/Contenido/activitat2.html
+++ b/html/Contenido/activitat2.html
@@ -23,9 +23,10 @@
           <article>
             <header>
               <p>
-                  - Miles Davis: L'àlbum es recorda a les Columbia Records estudis a Nova York en just dues sessions de just hores després del seu dia, març 2 i abril 22, 1959.
-                  - John Coltrane: Aquest àlbum va ser com una autorefundació de la música de Coltrane i el tret de sortida del millor de la seva obra que arribaria a partir d'aquest disc, una mena de pregària musical es mitja hora dividida en quatre parts basades en una progressió musical i emocional que culminen gloriosament en la conclusió.
-                  - Charles Mingus: 
+                  - <b>Miles Davis:</b> L'àlbum es recorda a les Columbia Records estudis a Nova York en just dues sessions de just hores després del seu dia, març 2 i abril 22, 1959. <br>
+                  - <b>John Coltrane:</b> Aquest àlbum va ser com una autorefundació de la música de Coltrane i el tret de sortida del millor de la seva obra que arribaria a partir d'aquest disc, una mena de pregària musical es mitja hora dividida en quatre parts basades en una progressió musical i emocional que culminen gloriosament en la conclusió. <br>
+                  - <b>Charles Mingus:</b> Molt pocs músics, si n'hi ha algun, van ser capaços de tocar el contrabaix i compondre com Charles Mingus. Expliquen que escoltant Duke Ellington, va descobrir que hi havia una altra música més enllà dels murs de l'església. En qualsevol cas, en aixecar la seva carrera amb total llibertat Mingus funda amb el bateria Max Roach la discogràfica Debut Records, la companyia que un any després immortalitzaria una actuació irrepetible, un concert únic a Massey Hall de Toronto del qual es va presentar com The Quintet res menys que Charlie Parker 'Bird' al saxo alt, Dizzy Gillespie amb la trompeta, Bud Powell al piano, Charles Mingus al contrabaix i Max Roach a la bateria. Un bebop Irrepetible. <br>
+                  - <b>The Dave Brubeck Quartet:</b> Un imprescindible clàssic del jazz blanc. Aquest és un disc per a tots, per als entesos, per als aficionats, per als que no han sentit jazz a la seva vida i fins i tot per als més ortodoxos. El llegendari pianista, compositor i arranjador Dave Brubeck es posa al capdavant d'aquest quartet al costat del gran saxo alt, Paul Desmond, Eugene Wright al contrabaix i Joe Morello a la bateria. Amb ells va aconseguir gravar un ram de temes inoblidables entre els quals destaquen dos estàndards imprescindibles que qualsevol persona ha escoltat més d'una vegada a la seva vida, Take Five i Blue Rondo à la Turk. <br>
               </p>
         <nav>
             <ul>
