crear activitat1 interactivos

--- a/html/exercicishtml.html
+++ b/html/exercicishtml.html
@@ -45,5 +45,7 @@
     <h2>Contenido</h2>
     <a href="Contenido/activitat1.html">activitat1</a><br>
     <a href="Contenido/activitat2.html">activitat2</a><br>
+    <h2>Interactivos</h2>
+    <a href="Interactivos/activitat1.html">activitat1</a><br>
 </body>
 </html>
