--- a/html/exercicishtml.html
+++ b/html/exercicishtml.html
@@ -47,5 +47,6 @@
     <a href="Contenido/activitat2.html">activitat2</a><br>
     <h2>Interactivos</h2>
     <a href="Interactivos/activitat1.html">activitat1</a><br>
+    <a href="Interactivos/activitat2.html">activitat2</a><br>
 </body>
 </html>
