crear activitat3 interactivos

--- a/html/exercicishtml.html
+++ b/html/exercicishtml.html
@@ -48,5 +48,6 @@
     <h2>Interactivos</h2>
     <a href="Interactivos/activitat1.html">activitat1</a><br>
     <a href="Interactivos/activitat2.html">activitat2</a><br>
+    <a href="Interactivos/activitat3.html">activitat3</a><br>
 </body>
 </html>
