falta acabar activitat1 accesibilidad

--- a/html/exercicishtml.html
+++ b/html/exercicishtml.html
@@ -49,5 +49,7 @@
     <a href="Interactivos/activitat1.html">activitat1</a><br>
     <a href="Interactivos/activitat2.html">activitat2</a><br>
     <a href="Interactivos/activitat3.html">activitat3</a><br>
+    <h2>Accesibilidad</h2>
+    <a href="Accesibilidad/activitat1.html">activitat1</a><br>
 </body>
 </html>
