crear activitat1 accesibilidad

--- a/html/Accesibilidad/activitat1.html
+++ b/html/Accesibilidad/activitat1.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Accessibility</h1>
+    <p>Jo crec que si que són accessibles, l'unic que hi han pàgines que no ho tenen molt ordenat i ja molts noms raros.</p>
+    <p>Podrien millorar com he dit al primer paràgraf, el ordre.</p><br>
     <a href="../exercicishtml.html">Tornar a les activitats</a>
 </body>
 </html>
