--- a/html/exercicishtml.html
+++ b/html/exercicishtml.html
@@ -51,5 +51,6 @@
     <a href="Interactivos/activitat3.html">activitat3</a><br>
     <h2>Accesibilidad</h2>
     <a href="Accesibilidad/activitat1.html">activitat1</a><br>
+    <a href="Accesibilidad/activitat2.html">activitat2</a><br>
 </body>
 </html>
