--- a/css/exerciciscss.html
+++ b/css/exerciciscss.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Activitats CSS</h1>
-    <h2></h2>
-    <a href="">activitat1</a><br>
+    <h2>Selectores</h2>
+    <a href="Selectores/activitat1.html">activitat1</a><br>
+
 </body>
 </html>
