crear activitat1 i activitat2 de selectores css

--- a/css/exerciciscss.html
+++ b/css/exerciciscss.html
@@ -9,5 +9,6 @@
     <h1>Activitats CSS</h1>
     <h2>Selectores</h2>
     <a href="Selectores/activitat1.html">activitat1</a><br>
+    <a href="Selectores/activitat2.html">activitat2</a><br>
 </body>
 </html>
