--- a/css/Selectores/activitat1.html
+++ b/css/Selectores/activitat1.html
@@ -27,6 +27,6 @@
             <li class="marro">Coco</li>
             <li class="groc">Platan</li>
         </ul>
-        <a href="../exercicishtml.html">Tornar a les activitats</a>
+        <a href="../exerciciscss.html">Tornar a les activitats</a>
 </body>
 </html>
