--- a/css/Selectores/activitat2.html
+++ b/css/Selectores/activitat2.html
@@ -30,6 +30,6 @@
     </body>
    
     </html>
-    <a href="../exercicishtml.html">Tornar a les activitats</a>
+    <a href="../exerciciscss.html">Tornar a les activitats</a>
 </body>
 </html>
