--- a/css/exerciciscss.html
+++ b/css/exerciciscss.html
@@ -10,5 +10,6 @@
     <h2>Selectores</h2>
     <a href="Selectores/activitat1.html">activitat1</a><br>
     <a href="Selectores/activitat2.html">activitat2</a><br>
+    <a href="Selectores/activitat3.html">activitat3</a><br>
 </body>
 </html>
