--- a/css/exerciciscss.html
+++ b/css/exerciciscss.html
@@ -11,5 +11,7 @@
     <a href="Selectores/activitat1.html">activitat1</a><br>
     <a href="Selectores/activitat2.html">activitat2</a><br>
     <a href="Selectores/activitat3.html">activitat3</a><br>
+    <h2>Variables</h2>
+    <a href="Variables/activitat1.html">activitat1</a><br>
 </body>
 </html>
