falta acabar el portfoli

--- a/index.html
+++ b/index.html
@@ -2,10 +2,93 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estil.css">
+    <title>Portfoli</title>
 </head>
 <body>
+		<header id="mainheader">
+			<nav id="navbar">
+				<div class="container">
+					<a href="#mainheader" class="logo"><img src="/img/logo.png" alt="" /></a>
+					<ul>
+						<li><a href="#sobremi">SOBRE MI</a></li>
+                        <li><a href="#sobremi">HABILITATS</a></li>
+                        <li><a href="#activitats">ACTIVITATS</a></li>
+						<li><a href="#contacte">CONTACTE</a></li>
+					</ul>
+				</div>
+			</nav>
+			<div id="showcase">
+				<div class="container">
+					<a href="#projects" class="btn btn-outline">VICTOR MARTINEZ</a>
+				</div>
+                <div class="projects-row">
+					<div class="projects-row-detail">
+						<img src="/img/" alt="" />
+					</div>
+					<div class="projects-row-detail">
+						<img src="/img/" alt="" />
+					</div>
+			    </div>
+			</div>
+		</header>
+
+        <section id="sobremi">
+			<div class="container">
+				<div class="about-row">
+					<div class="about-row-experience">
+						<h4>Habilitats</h4>
+						<p class="large">x</p>
+						<p class="large">x</p>
+						<p class="large">x</p>
+					</div>
+					<div class="about-row-me">
+						<h4>SOBRE MI</h4>
+						<p>
+							Breu explicació de mi...
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
+		
+        <section id="activitats">
+			<div class="container">
+				<h2>ACTIVITATS</h2>
+				
+		</section><br>
+
+		
+
+		<section id="contacte">
+			<div class="container">
+				<h2>CONTACTE</h2>
+				<div class="contact-row">
+					<div class="contact-row-icon">
+						<img src="/img/icon-address.png" alt="" />
+						<p>Carrer Sant Roc nº40</p>
+					</div>
+					<div class="contact-row-icon">
+						<img src="/img/icon-mail.png" alt="" />
+						<p>vmartinez2@inscaparrella.cat</p>
+					</div>
+					<div class="contact-row-icon">
+						<img src="/img/icon-phone.png" alt="" />
+						<p>621224093</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
+
+
+
+
     <h1>Index</h1>
     <a href="html/exercicishtml.html">Exercicis HTML</a><br>
     <a href="css/exerciciscss.html">Exercicis CSS</a><br>
