acabar activitat1 css

--- a/css/Variables/activitat1.html
+++ b/css/Variables/activitat1.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    .titulo {
+        padding: var(--separacion);
+        text-transform: uppercase;
+        color: #D95B43;
+    }
 </head>
 <body>
-    <title>El bum español de los libros sobre el Imperio Romano</title>
+   
+    <html>
+        <body>
+            <h1 class="titulo" style="--separacion: 4rem">El bum español de los libros sobre el Imperio Romano</h1>
+        </body>
+    </html>
     <p>Del circo a las bacanales, la guerra, la corrupción o lo paranormal, la divulgación histórica sobre Roma vive un momento de esplendor editorial en España. La historiadora Dominica Contreras cree que la conducción romana fue levantada por Vespasiano en el siglo I, lo que adelanta el inicio de las obras casi 50 años.</p>
     
     <a href="../exerciciscss.html">Tornar a les activitats</a>
