--- a/totesactivitats.html
+++ b/totesactivitats.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Activitats - Victor</title>
     <link rel="stylesheet" href="estil.css">
-    <title>Victor - Portafoli</title>
 </head>
 <body>
-	<header>
+
+    <header>
         <div class="container">
             <h1>Victor Martinez</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Inici</a></li>
                     <li><a href="sobremi.html">Sobre Mi</a></li>
-                    <li><a href="totesactivitats.html">Activitats</a></li>
+                    <li><a href="totesactivitats.html">Projectes</a></li>
                     <li><a href="contacte.html">Contacte</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <section id="home" class="container">
-        <h2>Benvingut al meu Portafoli!</h2>
-        <p>Aquí pots descobrir tot sobre les meves activitats i la meva passió pel desenvolupament web.</p>
-		<img src="img/Victor.jpg" alt="Victor" width="600" height="600">
-        <img src="img/html.jpg" alt="html" width="600" height="600">
+    <section id="totesactivitats" class="container">
+        <h2>Activitat HTML i CSS</h2>
+        <ul>
+            <li><a href="html/exercicishtml.html">Exercicis HTML</a></li>
+            <li><a href="css/exerciciscss.html">Exercicis CSS</a></li>
+        </ul>
     </section>
 
     <footer>
