--- a/sobremi.html
+++ b/sobremi.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="index.html">Inici</a></li>
                     <li><a href="sobremi.html">Sobre Mi</a></li>
-                    <li><a href="totesactivitats.html">Projectes</a></li>
+                    <li><a href="totesactivitats.html">Activitats</a></li>
                     <li><a href="contacte.html">Contacte</a></li>
                 </ul>
             </nav>
