--- a/wireframes.html
+++ b/wireframes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacte - Victor</title>
+    <title>Wireframes - Victor</title>
     <link rel="stylesheet" href="estil.css">
 </head>
 <body>
@@ -24,23 +24,12 @@
         </div>
     </header>
 
-    <section id="Contacte" class="container">
-        <h2>Contacta amb mi</h2>
-        <p>Emplena el formulari de contacte o connecta amb mi a través de les xarxes socials.</p>
-
-        <form action="processar_formulari.php" method="post">
-            <label for="name">Nom:</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Missatge:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
-
-            <button type="submit">Enviar</button>
-        </form>
-
+    <section id="wireframes" class="container">
+        <h2>Wireframes</h2>
+        <p>Aquí pots veure alguns models de wireframes que vaig utilitzar per planificar el disseny del meu portafoli:</p>
+            <img src="img/wireframes1.jpg" alt="Wireframe 1" width="600" height="600">
+            <img src="img/wireframes2.jpg" alt="Wireframe 2" width="800" height="600">
+        </div>
     </section>
     
     <footer>
@@ -54,4 +43,3 @@
     </footer>
 </body>
 </html>
-
