--- a/sobremi.html
+++ b/sobremi.html
@@ -15,8 +15,10 @@
                 <ul>
                     <li><a href="index.html">Inici</a></li>
                     <li><a href="sobremi.html">Sobre Mi</a></li>
+                    <li><a href="habilitats.html">Habilitats</a></li>
                     <li><a href="totesactivitats.html">Activitats</a></li>
                     <li><a href="contacte.html">Contacte</a></li>
+                    <li><a href="wireframes.html">Wireframes</a></li>
                 </ul>
             </nav>
         </div>
