--- a/totesactivitats.html
+++ b/totesactivitats.html
@@ -15,8 +15,10 @@
                 <ul>
                     <li><a href="index.html">Inici</a></li>
                     <li><a href="sobremi.html">Sobre Mi</a></li>
+                    <li><a href="habilitats.html">Habilitats</a></li>
                     <li><a href="totesactivitats.html">Activitats</a></li>
                     <li><a href="contacte.html">Contacte</a></li>
+                    <li><a href="wireframes.html">Wireframes</a></li>
                 </ul>
             </nav>
         </div>
@@ -28,6 +30,8 @@
             <li><a href="html/exercicishtml.html">Exercicis HTML</a></li>
             <li><a href="css/exerciciscss.html">Exercicis CSS</a></li>
         </ul>
+        <img src="img/html1.png" alt="Victor" width="600" height="600">
+        <img src="img/css.jpg" alt="html" width="600" height="600">
     </section>
 
     <footer>
