acabat apartat wireframes

--- a/habilitats.html
+++ b/habilitats.html
@@ -40,6 +40,8 @@
             <div class="barra-percentatge" style="width: 95%;"></div>
             <span class="percentatge">95%</span>
         </div>
+        <img src="img/habilitats.jpg" alt="habilitats" width="600" height="400">
+        <img src="img/habilitats2.jpg" alt="habilitats2" width="600" height="400">
     </section>
 
     <footer>
