--- a/wireframes.html
+++ b/wireframes.html
@@ -26,9 +26,15 @@
 
     <section id="wireframes" class="container">
         <h2>Wireframes</h2>
-        <p>Aquí pots veure alguns models de wireframes que vaig utilitzar per planificar el disseny del meu portafoli:</p>
-            <img src="img/wireframes1.jpg" alt="Wireframe 1" width="600" height="600">
-            <img src="img/wireframes2.jpg" alt="Wireframe 2" width="800" height="600">
+        <p>Aquí pots veure i descarregals pulsant damunt de la imatge, alguns models de wireframes que vaig utilitzar per planificar el disseny del meu portafoli:</p>
+                <a href="img/wireframes1.jpg" download>
+                    <img src="img/wireframes1.jpg" alt="Wireframe 1" width="600" height="600">
+                </a>
+                <a href="img/wireframes2.jpg" download>
+                    <img src="img/wireframes2.jpg" alt="Wireframe 2" width="850" height="600">
+                </a>
+        </section>
+        
         </div>
     </section>
     
