pagina web - portfoli acabat

--- a/sobremi.html
+++ b/sobremi.html
@@ -30,6 +30,9 @@
         <p>A més, domino XML, una llenguatge de marcatge extensible que utilitzo per a la gestió estructurada de dades i la comunicació eficient entre diferents components del sistema.</p> 
         <p>També tinc una sòlida experiència en diverses llenguatges de programació com JavaScript, Python i altres, per crear funcionalitats dinàmiques i interactivitat en els llocs web.</p>
         <p>La meva aproximació al desenvolupament web implica mantenir-me actualitzat amb les últimes tendències i tecnologies emergents, assegurant-me que els projectes que lidero estiguin alineats amb les millors pràctiques de la indústria i oferint una experiència excepcional als usuaris.</p>
+        <img src="img/iconohtml.png" alt="iconohtml" width="450" height="500">
+        <img src="img/iconoxml.png" alt="iconoxml" width="450" height="500">
+        <img src="img/iconocss.png" alt="iconocss" width="450" height="500">
     </section>
 
     <footer>
