--- a/contacte.html
+++ b/contacte.html
@@ -26,7 +26,7 @@
 
     <section id="Contacte" class="container">
         <h2>Contacta amb mi</h2>
-        <p>Emplena el formulari de contacte o connecta amb mi a través de les xarxes socials.</p>
+        <p>Emplena el formulari de contacte o connecta amb mi a través de les xarxes socials (Instagram).</p>
 
         <form action="processar_formulari.php" method="post">
             <label for="name">Nom:</label>
