--- a/contacte.html
+++ b/contacte.html
@@ -40,7 +40,10 @@
 
             <button type="submit">Enviar</button>
         </form>
-
+        <div class="imatgecentrada">
+            <img src="img/correu.png" alt="correu" width="400" height="400">
+        </div>
+        
     </section>
     
     <footer>
