--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 
     <section id="home" class="container">
         <h2>Benvingut al meu Portafoli!</h2>
-        <p>Aquí pots descobrir tot sobre les meves activitats i la meva passió pel desenvolupament web.</p>
-		<img src="img/Victor.jpg" alt="Victor" width="600" height="600">
-        <img src="img/html.jpg" alt="html" width="600" height="600">
+        <p>Aquí pots descobrir tot sobre les meves activitats i la meva passió pel desenvolupament web.</p><br><br>
+        <div class="imatgecentrada">
+            <img src="img/Victor.jpg" alt="Victor" width="600" height="600">
+            <img src="img/html.jpg" alt="html" width="600" height="600">
+        </div>
+		
     </section>
 
     <footer>
