--- a/totesactivitats.html
+++ b/totesactivitats.html
@@ -30,8 +30,10 @@
             <li><a href="html/exercicishtml.html">Exercicis HTML</a></li>
             <li><a href="css/exerciciscss.html">Exercicis CSS</a></li>
         </ul>
-        <img src="img/html1.png" alt="Victor" width="600" height="600">
-        <img src="img/css.jpg" alt="html" width="850" height="600">
+        <div class="imatgecentrada">
+            <img src="img/html1.png" alt="Victor" width="600" height="600">
+            <img src="img/css.jpg" alt="html" width="600" height="600">
+        </div>
     </section>
 
     <footer>
