--- a/habilitats.html
+++ b/habilitats.html
@@ -40,8 +40,10 @@
             <div class="barra-percentatge" style="width: 95%;"></div>
             <span class="percentatge">95%</span>
         </div>
-        <img src="img/habilitats.jpg" alt="habilitats" width="600" height="400">
-        <img src="img/habilitats2.jpg" alt="habilitats2" width="600" height="400">
+        <div class="imatgecentrada">
+            <img src="img/habilitats.jpg" alt="habilitats" width="400" height="400">
+            <img src="img/habilitats2.jpg" alt="habilitats2" width="400" height="400">
+        </div>
     </section>
 
     <footer>
