--- a/sobremi.html
+++ b/sobremi.html
@@ -29,10 +29,12 @@
         <p>Sóc un apassionat desenvolupador web amb una extensa experiència en diverses tecnologies clau per a la creació de llocs web interactius i funcionals. Utilitzo HTML i CSS per a la creació de l'estructura i l'estil dels llocs web, assegurant-me que siguin visualment atractius i responsius a diferents.</p> 
         <p>A més, domino XML, una llenguatge de marcatge extensible que utilitzo per a la gestió estructurada de dades i la comunicació eficient entre diferents components del sistema.</p> 
         <p>També tinc una sòlida experiència en diverses llenguatges de programació com JavaScript, Python i altres, per crear funcionalitats dinàmiques i interactivitat en els llocs web.</p>
-        <p>La meva aproximació al desenvolupament web implica mantenir-me actualitzat amb les últimes tendències i tecnologies emergents, assegurant-me que els projectes que lidero estiguin alineats amb les millors pràctiques de la indústria i oferint una experiència excepcional als usuaris.</p>
-        <img src="img/iconohtml.png" alt="iconohtml" width="450" height="500">
-        <img src="img/iconoxml.png" alt="iconoxml" width="450" height="500">
-        <img src="img/iconocss.png" alt="iconocss" width="450" height="500">
+        <p>La meva aproximació al desenvolupament web implica mantenir-me actualitzat amb les últimes tendències i tecnologies emergents, assegurant-me que els projectes que lidero estiguin alineats amb les millors pràctiques de la indústria i oferint una experiència excepcional als usuaris.</p><br><br>
+        <div class="imatgecentrada">
+            <img src="img/iconohtml.png" alt="iconohtml" width="400" height="400">
+            <img src="img/iconoxml.png" alt="iconoxml" width="400" height="400">
+            <img src="img/iconocss.png" alt="iconocss" width="400" height="400">
+        </div>
     </section>
 
     <footer>
