els commits que surt Saad, soc jo Martinez2005, no faigos cas se mhavia posat el seu git, ns perque

--- a/totesactivitats.html
+++ b/totesactivitats.html
@@ -25,7 +25,7 @@
     </header>
 
     <section id="totesactivitats" class="container">
-        <h2>Activitats HTML i CSS</h2>
+        <h2>Activitats HTML i CS</h2>
         <ul>
             <li><a href="html/exercicishtml.html">Exercicis HTML</a></li>
             <li><a href="css/exerciciscss.html">Exercicis CSS</a></li>
