--- a/css/exerciciscss.html
+++ b/css/exerciciscss.html
@@ -13,5 +13,6 @@
     <a href="Selectores/activitat3.html">activitat3</a><br>
     <h2>Variables</h2>
     <a href="Variables/activitat1.html">activitat1</a><br>
+    <a href="Variables/activitat2.html">activitat2</a><br>
 </body>
 </html>
