--- a/css/exerciciscss.html
+++ b/css/exerciciscss.html
@@ -14,5 +14,7 @@
     <h2>Variables</h2>
     <a href="Variables/activitat1.html">activitat1</a><br>
     <a href="Variables/activitat2.html">activitat2</a><br>
+    <h2>Bem</h2>
+    <a href="Bem/activitat1.html">activitat1</a><br>
 </body>
 </html>
