--- a/contacte.html
+++ b/contacte.html
@@ -28,7 +28,8 @@
         <h2>Contacta amb mi</h2>
         <p>Emplena el formulari de contacte o connecta amb mi a través de les xarxes socials (Instagram).</p>
 
-        <form action="processar_formulari.php" method="post">
+        <form action="https://api.web3forms.com/submit" method="POST">
+            <input type="hidden" name="access_key" value="2092820f-eb9e-44f7-8896-426284c067ec">
             <label for="name">Nom:</label>
             <input type="text" id="name" name="name" required>
 
